--- a/informasi.html
+++ b/informasi.html
@@ -59,7 +59,7 @@
                     <p>Lestarikan tradisi, jaga warisan budaya! <a href="https://www.instagram.com/p/DE9VgCOPrCU/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
                 </article>
                 <article class="news-item">
-                    <img src="images/blank.jpg" alt="Berita 4">
+                    <img src="images/senam.jpg" alt="Berita 4">
                     <h2>Senam Rutin PKK</h2>
                     <p>Senam sabtu ini tidak hanya tentang kesehatan fisik, tapi juga mempererat tali silaturahmi antarwarga. <a href="https://www.instagram.com/p/DFmd21nvMQj/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
                 </article>
