--- a/informasi.html
+++ b/informasi.html
@@ -54,7 +54,7 @@
                     <p>Teknologi hadir, sinyal lelet minggir. <a href="https://www.instagram.com/p/DFCPKM2PNzN/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
                 </article>
                 <article class="news-item">
-                    <img src="images/blank.jpg" alt="Berita 4">
+                    <img src="images/genduren.jpg" alt="Berita 4">
                     <h2>Tradisi Genduren</h2>
                     <p>Lestarikan tradisi, jaga warisan budaya! <a href="https://www.instagram.com/p/DE9VgCOPrCU/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
                 </article>
