--- a/informasi.html
+++ b/informasi.html
@@ -63,6 +63,21 @@
                     <h2>Senam Rutin PKK</h2>
                     <p>Senam sabtu ini tidak hanya tentang kesehatan fisik, tapi juga mempererat tali silaturahmi antarwarga. <a href="https://www.instagram.com/p/DFmd21nvMQj/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
                 </article>
+                <article class="news-item">
+                    <img src="images/isra.jpg" alt="Berita 4">
+                    <h2>Peringatan Isra' Mi'raj</h2>
+                    <p>Mari terus menjaga tradisi keagamaan sebagai bagian dari identitas desa kita, menjadikan Desa Gunung Keramat sebagai desa yang religius, harmonis, dan penuh keberkahan.<a href="https://www.instagram.com/p/DFmflZRP8bp/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
+                </article>
+                <article class="news-item">
+                    <img src="images/posbindu.jpg" alt="Berita 4">
+                    <h2>Pos Pembinaan Terpadu</h2>
+                    <p>Sehat bersama, demi hidup yang lebih lama.<a href="https://www.instagram.com/p/DF-S23SvdPB/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
+                </article>
+                <article class="news-item">
+                    <img src="images/perkebunan.jpg" alt="Berita 4">
+                    <h2>Perkebunan di Desa Gunung Keramat</h2>
+                    <p>Kerja di PT tetap jalan, bertani pun tak ditinggalkan! Karena tanah yang diolah, hasilnya melimpah.<a href="https://www.instagram.com/p/DF_amEBTbOb/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Baca selengkapnya</a></p>
+                </article>
             </div>
         </div>
     </main>
