--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="text-box">
     <h1>Website Profil<br>Desa Gunung Kramat</h1>
     <p>Sumber informasi tentang Desa Gunung Keramat</p>
-    <a href="https://gunungkeramat.kablampura.id/" target="_blank" class="hero-btn">Kunjungi Kami</a>
+    <a href="https://www.instagram.com/gunungkeramat_desa/" target="_blank" class="hero-btn">Kunjungi Kami</a>
 </div>
 </section>
 
