--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <section class="lokasi fade-in">
     <div class="box">
         <h1>Lokasi Desa</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad earum odit sint!</p>
+        <p>Desa Gunung Keramat, Kec. Abung Semuli, Kab. Lampung Utara</p>
     </div>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15904.375025060408!2d105.10471654999999!3d-4.753734500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3f52384f593651%3A0xabf7d4a266732f15!2sGunung%20Kramat%2C%20Abung%20Semuli%2C%20North%20Lampung%20Regency%2C%20Lampung!5e0!3m2!1sen!2sid!4v1736053404321!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
