--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <section id="galeri fade-in">
     <div class="galeri-box">
-        <h1>Galeri Desa</h1>
+        <h1>Galeri</h1>
         <p>Desa Gunung Keramat, Kec. Abung Semuli, Kab. Lampung Utara, Lampung</p>
     </div>
 </section>
